Fix no plugins string alignement

--- a/packages/strapi-admin/admin/src/components/LeftMenuLink/styles.scss
+++ b/packages/strapi-admin/admin/src/components/LeftMenuLink/styles.scss
@@ -8,7 +8,7 @@
 }
 
 .link {
-  padding-top: 0.8rem;
+  padding-top: .9rem;
   padding-bottom: 0.2rem;
   padding-left: 1.6rem;
   min-height: 3.6rem;
